# EmbeddedLinuxMaster_Projects_Task_Practices

./: readme.md
01_Python/: readme.md
01_Python/Tasks/: T1.py  T10.py  T11.py  T12.py  T13.py  T14.py  T15.py  T16.py  T2.py  T3.py  T4.py  T5.py  T6.py  T7.py  T8.py  T9.py
02_C++/: readme.md
02_C++/Practices/: P18_lambda.cc  P19_MemoryUsage.cc  Practice01.cc  Practice02_testCpp11_vs_14.cc  Practice03_testCppModerns.cpp  Practice04.cc  Practice06_CheckDataTypes.cc  Practice07_UnsignedChar.cc  Practice08_BoolAlpha.cc  Practice09_LocalVariableInit.cc  Practice10_MemorySection.cc  Practice11.cc  Practice12.cc  Practice13.cc  Practice14.cc  Practice15.cc  Practice16.cc  Practice17_reinterpret.cc  a.out  output.asm  p16.out  practice05.cc
02_C++/Practices/OOP/: P02_functor.cc  P03_post_pre.cc  P04_friend_And_Operator.cc  P05_Returnlvalue.cc  P06_Rvalue.cc  a.out  (+2 more)
02_C++/Tasks/: T1.cc  T10.cc  T11.cc  T12.cc  T13.cc  T14.cc  T15.cc  T16.cc  T17.cc  T18.cc  T19.cc  T2.cc  T20.cc  T21.cc  T22.cc  T23.cc  T24.cc  T25.cc  T26.cc  T27.cc  T28.cc  T3.cc  T4.cc  T5.cc  T6.cc  T7.cc  T8.cc  T9.cc
03_Linux/: readme.md  test.py
03_Linux/Tasks/: 01_tasks.txt  02-tasks.txt  03-tasks.txt  test.cc  toggle_caps.sh
03_Linux/Tasks/Tasks02/: CMakeLists.txt  T02_cmake_ToGenerate_shared_lib.cc  my_library.cc  my_library.hh
04_Bash/Practices/: P1_Hello_world.sh  P2_read_from_user.sh  P3_variables.sh  P4_Comments.sh  P5_if_test.sh  P6_OR_AND.sh  P7_Loop.sh  buildScript.sh  select.sh
05_Raspberrypi/: Blinking_Led.cc  GUI_TASK_BlinkLed.py  Pwm_Task.py  a.out  info.txt  led_on_off.py
(+46 files in other folders)
